<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp"
        app:title="Navigation"
        app:titleTextColor="@color/white"
        android:backgroundTint="@color/black"
        android:paddingStart="20dp"
        />

    <TextView
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp"
        android:textSize="20dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp"/>
    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp"
        android:textSize="20dp"
        android:paddingStart="20dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp"
        android:textSize="20dp"
        android:paddingStart="20dp"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/Adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Adresse"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp"
        android:textSize="20dp"
        android:paddingStart="20dp"/>
    <EditText
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:id="@+id/Ville"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ville"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp"
        android:textSize="20dp"
        android:paddingStart="20dp"/>
    <Spinner
        android:id="@+id/ville"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:entries="@array/ville"/>
    <Button
        android:id="@+id/envoyer"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:text="@string/envoyer"
        android:backgroundTint="#A5A5A5"
        app:cornerRadius="0dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        />



</LinearLayout>